# drepo

./: .gitattributes  .gitignore  README.md  __main__.py  delete_pyc.py  enforce.py  make_init.py  pyproject.toml  version.py  write_tests.py
drepo/: __init__.py  __main__.py  api.py  delete_pyc.py  enforce.py  make_init.py  version.py  write_tests.py
drepo/tests/: __init__.py  test_api.py  test_delete_pyc.py  test_enforce.py  test_make_init.py  test_version.py  test_write_tests.py
